# AssetOpsBench

./: .env.public  .gitignore  OLD_README.md  README.md  battery.md  battery_scenarios.json  docker-compose.couchdb.yml  instructions_profiling.md  optimization_plan.md  pyproject.toml  results.txt  temp_error.txt  temp_error.txt.save
docs/: battery_1day_plan.md  battery_1week_plan.md  battery_server_plan.md  client_demo_report.md  inference_alt_runtimes.md  speedup_baseline.md
profiles/: README.md
scripts/: export_battery_savedmodel.py  profile_scenarios_detailed.py  quantize_battery_models.py  run_scenario_diagnostic.py  setup_battery_artifacts.sh
src/agent/: cli.py  models.py
src/agent/plan_execute/: executor.py  models.py  planner.py  runner.py
src/agent/tests/: test_runner.py
src/couchdb/: couchdb_setup.sh  docker-compose.yaml  init_battery.py  prepare_battery_csv.py
src/couchdb/sample_data/battery/: battery_test_subset.json
src/couchdb/sample_data/iot/: B0006_couchdb.json
src/servers/battery/: README.md  benchmark_inference.py  chemistries.yaml  couchdb_client.py  diagnosis.py  main.py  model_wrapper.py  preprocessing.py  probe_cold_start.py  profile_cli.py  profile_diagnostic.py  scenarios_report.md
src/servers/battery/profiles/: README.md  mcp_batch_demo_2026-05-06T024615Z.json
src/servers/battery/profiles/ablation_study/: 01_ablation_boot.json  02_tf_tensor_batching.json  03_scenario_pre_cache.json  04_scenario_post_cache.json
src/servers/battery/profiles/benchmark_2026-05-06T030016Z/: batched_predict.json  disk_cache.json  graph_precompile.json  naive_baseline.json  parallel_fetch.json  summary.json
src/servers/battery/profiles/scenarios_2026-05-06T045607Z/: scenario_1.json  scenario_2.json  scenario_4.json  scenario_5.json  scenario_6.json  scenario_7.json  scenario_8.json
src/servers/battery/profiling/: __init__.py  ablation_boot.py  benchmark_inference.py  benchmark_optimizations.py  compare.py  compare_profiles.py  mcp_batch_demo.py  mock_data.py  profile_scenario.py  profile_scenarios_detailed.py  profiler.py  quantize_models.py  run_profile.py
src/servers/battery/tests/: conftest.py  test_benchmark_inference.py  test_preprocessing.py  test_speedup_regression.py  test_tools.py  test_validation.py
src/servers/fmsr/: failure_modes.yaml
src/servers/tsfm/: main.py  models.py
src/servers/tsfm/artifacts/output/tuned_datasets/: battery_cycle_metrics.csv
